fix the mapStruct on Response